BuildHughes/translation-tool/inputs/source_meta/objects/HnsProvisioningParas__x.object
<CustomObject>
    <description>HnsProvisioningParas</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HnsProvisioningParas</externalName>
    <fields>
        <fullName>SWSERVICEORDERID__c</fullName>
        <description>SWSERVICEORDERID</description>
        <externalDeveloperName>SWSERVICEORDERID</externalDeveloperName>
        <label>Install Service Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_NAP_SOURCE__c</fullName>
        <description>Z_NAP_SOURCE</description>
        <externalDeveloperName>Z_NAP_SOURCE</externalDeveloperName>
        <label>NAP Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_SRCSYSSITEID__c</fullName>
        <description>Z_SRCSYSSITEID</description>
        <externalDeveloperName>Z_SRCSYSSITEID</externalDeveloperName>
        <label>Source System Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HnsProvisioningParas</label>
    <pluralLabel>HnsProvisioningParas</pluralLabel>
</CustomObject>